plugins {
    id 'java'
}

group = 'test-containers-test'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    testImplementation 'junit:junit:4.13.2'

    testImplementation 'org.apache.logging.log4j:log4j-api:2.26.1'
    testImplementation 'org.apache.logging.log4j:log4j-core:2.26.1'
    testImplementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.26.1'

    testImplementation 'org.testcontainers:testcontainers-kafka:2.0.5'
    testImplementation 'org.apache.kafka:kafka-clients:4.3.1'
}

tasks.named('test') {
    useJUnit()
}
